more refactoring to make a different implementation of the label prop. algorithm easier